<resources>
    <string name="app_name">PDM APP</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAt5ic-4_EbBWH9sZbylI1x-XZzAgApKcY</string>

    <string name="help_selected">Help selected</string>
    <string name="about_selected">About selected</string>
    <string name="fuel_cost">Fuel Cost</string>
    <string name="distance">Distance</string>
    <string name="destination">Destination</string>
    <string name="add_new_trip">Add New Trip</string>
    <string name="add">Add</string>
    <string name="all_fields_are_required">All fields are required!</string>
    <string name="cancel">Cancel</string>
    <string name="this_project_is_about_a_vehicle_maintenance_trip_tracker_app_n_nauthors_pedro_ferreira_bernardo_santos_n_nhttps_github_com_perdo1305_pdm_app_git">help descritive\n</string>
    <string name="vehicle">Vehicle</string>
    <string name="maintenance">Maintenance</string>

    <string name="live_data">Live data</string>
    <string name="settings">⚙️ Settings</string>
    <string name="help">❔ Help</string>
    <string name="about">ⓘ About</string>


    <string name="vehicle_name">Vehicle Model</string>
    <string name="last_maintenance_1000km_ago">Last maintenance: 1000km ago</string>
    <string name="destination_xyz">Destination: XYZ</string>
    <string name="distance_xx_km">Distance: XX km</string>
    <string name="fuel_cost_xx_xx">Fuel Cost: XX.XX €</string>
    <string name="service_type">Service Type</string>
    <string name="date_yyyy_mm_dd">Date: YYYY-MM-DD</string>
    <string name="cost_xx_xx">Cost: €XX.XX</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="add_trip">Add Trip</string>
    <string name="add_maintenance_record">Add Maintenance Record</string>
    <string name="current_value_n_a">Current Value: N/A</string>
    <string name="enter_a_value">Enter a value</string>
    <string name="add_value">Add Value</string>

    <string name="possible_interactions_tap_select_long_press_delete_swipe_return">Possible interactions: - Tap: select - Long Press: delete - Swipe: return</string>
    <string name="trip">Trip</string>
    <string name="license_plate">License Plate (XX-XX-XX)</string>
    <string name="select_vehicle">Select Vehicle</string>
    <string name="selected_vehicle_none">Selected Vehicle: None</string>
    <string name="bluetooth_status">Bluetooth Status</string>
    <string name="turn_on">Turn On</string>
    <string name="turn_off">Turn Off</string>
    <string name="discover_devices">Discover Devices</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="search_devices">Search devices</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="bluetooth_is_on">Bluetooth is on</string>
    <string name="could_not_turn_on_bluetooth">Could not turn on Bluetooth</string>
    <string name="bluetooth_is_not_available">Bluetooth is not available</string>
    <string name="bluetooth_is_available">Bluetooth is available</string>
    <string name="turning_on_bluetooth">Turning On Bluetooth...</string>
    <string name="bluetooth_is_already_on">Bluetooth is already on</string>
    <string name="turning_bluetooth_off">Turning Bluetooth Off</string>
    <string name="bluetooth_is_already_off">Bluetooth is already off</string>
    <string name="discovering_devices">Discovering devices...</string>
    <string name="device_does_not_provide_uuids">Device does not provide UUIDs</string>
    <string name="connected_to">"Connected to "</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="connection_failed">Connection failed</string>
    <string name="failed_to_connect_to">"Failed to connect to "</string>
    <string name="delete_vehicle">Delete Vehicle</string>
    <string name="are_you_sure_you_want_to_delete_this_vehicle">Are you sure you want to delete this vehicle?</string>
    <string name="yes">Yes</string>
    <string name="vehicle_deleted">Vehicle deleted</string>
    <string name="edit_vehicle">Edit Vehicle</string>
    <string name="vehicle__name">Vehicle Model</string>
    <string name="vehicle_details">Vehicle Details ( year / cv)</string>
    <string name="license__plate">License Plate (XX-XX-XX)</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="save">Save</string>
    <string name="all__fields_are_required">All fields are required!</string>
    <string name="add_new_vehicle">Add New Vehicle</string>
    <string name="ingl_s">🏴󠁧󠁢󠁥󠁮󠁧󠁿 English</string>
    <string name="portugu_s">🇵🇹 Portuguese</string>
    <string name="alem_o">🇩🇪 Alemão</string>
    <string name="this_project_is_an_application_that_manages_vehicles_developed_by_bernardo_santos_and_pedro_ferreira_for_more_information_visit_our_github_repository">This project is an application that manages vehicles, developed by Bernardo Santos and Pedro Ferreira.\n\nFor more information, visit our GitHub repository:</string>
    <string name="add_maintenance__record">Add Maintenance Record</string>
    <string name="service_type_e_g_oil_change">Service Type (e.g., Oil Change)</string>
    <string name="service_date_yyyy_mm_dd">Service Date (dd-mm-yyyy)</string>
    <string name="service_cost">Service Cost (€)</string>
    <string name="addd">Add</string>
    <string name="all___fields_are_required">All fields are required!</string>
    <string name="cancell">Cancel</string>
    <string name="edit_maintenance">Edit Maintenance</string>
    <string name="service_type_">Service Type</string>
    <string name="service_date_yyyy_mm_dd_">Service Date (dd-mm-yyyy)</string>
    <string name="service_cost_">Service Cost (€)</string>
    <string name="save_">Save</string>
    <string name="delete_maintenance_record">Delete Maintenance Record</string>
    <string name="are_you_sure_you_want_to_delete_this_maintenance_record">Are you sure you want to delete this maintenance record?</string>
    <string name="maintenance_record_deleted">Maintenance record deleted</string>
    <string name="selected_vehicle">"Selected Vehicle: "</string>
    <string name="please_fill_in_all_fields_and_select_both_start_and_end_locations">Please fill in all fields and select both start and end locations.</string>
    <string name="start_location">Start Location</string>
    <string name="start_location_selected">Start location selected.</string>
    <string name="end_location">End Location</string>
    <string name="end_location_selected">End location selected.</string>
    <string name="start_latitude">Start Latitude</string>
    <string name="start_longitude">Start Longitude</string>
    <string name="end_latitude">End Latitude</string>
    <string name="end_longitude">End Longitude</string>
    <string name="select_start_location">Select Start Location</string>
    <string name="select_end_location">Select End Location</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="start_location_">Start Location</string>
    <string name="end_location_">End Location</string>
    <string name="help_">Help</string>
    <string name="select_language">🌍 Select Language</string>
    <string name="please_login">Please Login</string>
    <string name="please_enter_email_id">Please enter email id</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="the_given_password_is_invalid_password_should_be_at_least_6_characters">The given password is invalid. Password should be at least 6 characters!</string>
    <string name="login_error_please_login_again">Login Error, Please Login  Again</string>
    <string name="you_are_logged_in">You are Logged in</string>
    <string name="please_register">Please register</string>
    <string name="you_are_logged_in_">You are Logged in</string>
    <string name="please_enter_email_id_">Please enter email id</string>
    <string name="please_enter_a_valid_email">Please enter a valid email</string>
    <string name="please_enter_your_password_">Please enter your password</string>
    <string name="password_should_be_at_least_6_characters">Password should be at least 6 characters!</string>
    <string name="please_confirm_your_password">Please confirm your password</string>
    <string name="passwords_dont_match">Passwords dont match!</string>
    <string name="the_email_adress_is_already_in_use_by_another_account">The email adress is already in use by another account!</string>
    <string name="signup_unsuccessful_please_try_again">SignUp Unsuccessful, Please Try Again</string>
    <string name="change_language">🌍 Change Language</string>
    <string name="toggle_dark_mode">☯︎ Toggle Dark/Light Mode</string>
    <string name="log_out">🔒 Log Out</string>
    <string name="already_have_an_account_sign_in_here">Already have an account? Sign in here</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="add_maintenance_record_">Add Maintenance Record</string>
    <string name="vehicle_deleted_successfully">vehicle delete\n</string>
    <string name="no">No</string>
    <string name="please_select_a_vehicle_first">Please select a vehicle first!</string>
    <string name="location_permission_denied">Location permission denied</string>

</resources>